# phases-nlp

./: .gitignore  LICENSE  README.md
bertopic_modeling_the_handbook_of_solitude/results_bertopic_custom_preprocessing/: bertopic_results.txt  bertopic_topic_summary.xlsx
bertopic_modeling_the_handbook_of_solitude/results_bertopic_default/: bertopic_results.txt  bertopic_topic_summary.xlsx
bertopic_modeling_the_handbook_of_solitude/scripts/: bertopic_custom_preprocessing.py  bertopic_default.py  config_solitude.yaml
phases_abstracts_guided_LDA/: README.md
phases_abstracts_guided_LDA/sme_guided_LDA/: .gitignore  README.md  requirements.txt
phases_abstracts_guided_LDA/standard_LDA/: .gitignore  README.md  requirements.txt
phases_abstracts_guided_LDA/tf_idf_guided_LDA/: .gitignore  README.md  requirements.txt
phases_abstracts_tf_idf/: .gitignore  README.md  abstracts.xlsx  requirements.txt
phases_abstracts_tf_idf/results/: tfidf_results.txt
phases_abstracts_tf_idf/scripts/: main.py  tfidf.py
phases_abstracts_topic_modeling/: .gitignore  README.md  main.py  requirements.txt  topic_modeling_abstracts.py
phases_abstracts_topic_modeling/results/: 35472229_Polish Version of Lars Tornstam's Gerotranscendenc.txt  35654552_Embodied experiences and existential reflections o.txt  37051690_How to Promote Gerotranscendence in Older Adults? .txt  39340757_Gerotranscendence as a Life Perspective Among Nurs.txt  39384424_A Case of Gerotranscendence_ Lived Experience of a.txt  39969194_"What does gerotranscendence mean to you?" Older a.txt  all_abstracts.txt  (+8 more)
phases_articles_retrieval/: .gitignore.txt  README.md  requirements.txt
plotkins_vaccines_bertopic_modeling/: README.md
psychological_construct_definition_generator/: .gitignore  README.md  pyproject.toml  requirements.txt
psychological_construct_definition_generator/src/: chunk_text.py  extract_definition_candidates.py  generate_definition.py  get_pmc_articles.py  main.py  parse_fulltext.py  pubmed_search.py  rag_retrieval.py  retrieve_abstracts.py  synthesize_construct.py
psychological_construct_definition_generator/src/psych_defgen_dummy/: apa_dictionary.py  chunk_text.py  entrez_config.py  get_pmc_articles.py  main.py  models.py  parse_fulltext.py  pubmed_search.py  rag_retrieval.py  retrieve_abstracts.py  select_definition_sentence.py  synthesize_construct.py
(+206 files in other folders)
